@@ -12,6 +12,8 @@
 # The above copyright notice and this permission notice shall be
 # included in all copies or substantial portions of the Software.
 
+__version__ = '1.0b6'
+__author__ = 'Adrian Sampson <adrian@radbox.org>'
+
 import beets.library
 Library = beets.library.Library
-
